# Apollo

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: apollo.hpp  component.hpp  component_array.cpp  component_array.hpp  component_map.cpp  component_map.hpp  component_storage.hpp  dispatcher.cpp  dispatcher.hpp  entity.hpp  entity_manager.hpp  family.cpp  family.hpp  map_storage.hpp  null_storage.hpp  parallel_dispatcher.cpp  parallel_dispatcher.hpp  read_write_lock.hpp  resource_accessor.cpp  resource_accessor.hpp  resource_subscription.hpp  resource_wrapper.hpp  sequential_dispatcher.cpp  sequential_dispatcher.hpp  storage.hpp  system.cpp  system.hpp  types.cpp  types.hpp  vec_storage.hpp  vector_bit_ops.hpp  world.cpp  world.hpp
test/: apollo_tests.cpp  component_array_test.cpp  dispatcher_tests.cpp  entity_manager_test.cpp  family_test.cpp  map_storage_test.cpp  null_storage_tests.cpp  storage_tests.hpp  test_components.hpp  test_systems.hpp  vec_storage_tests.cpp  world_tests.cpp
test/catch/: app.txt
